# KernelHook

./: .bazelrc  .gitignore  CMakeLists.txt  Makefile  README.md  README_zh.md  WORKSPACE.bazel
.github/workflows/: kbuild.yml  real-device-smoke.yml
bazel/: ddk.bzl
bazel/kernel_build/: BUILD.bazel
docs/audits/: kp-port-audit-2026-04-15.md
docs/en/: api-reference.md  architecture.md  avd-testing.md  build-modes.md  examples.md  getting-started.md  kh-root-demo.md  kmod-loader.md
docs/followups/: 2026-04-10-ddk-and-local-build-scripts.md  2026-04-10-extract-avd-crcs-6.12-mismatch.md  2026-04-10-kh-crc-binary-untracked.md  2026-04-10-plan5-kh-test-kbuild.md  2026-04-10-plan6-fake-linux-header-tree.md  2026-04-10-ring3-shim-padding-bump.md  2026-04-10-vendor-ko-walker-this-module-size.md  README.md
docs/zh/: api-reference.md  architecture.md  avd-testing.md  build-modes.md  examples.md  getting-started.md  kh-root-demo.md  kmod-loader.md
examples/fp_hook/: README.md  fp_hook.c
examples/hello_hook/: Kbuild  Makefile  Makefile.sdk  README.md  hello_hook.c
examples/hook_chain/: README.md  hook_chain.c
examples/hook_wrap_args/: README.md  hook_wrap_args.c
examples/kbuild_hello/: BUILD.bazel  README.md  kbuild_hello_main.c
examples/ksyms_lookup/: README.md  ksyms_lookup.c
include/: export.h  hmem.h  hmem_user.h  hook.h  hook_mem_user.h  kh_hook.h  kh_log.h  kh_strategy.h  ksyms.h  ktypes.h  log.h  memory.h  platform.h  remote_hook.h  symbol.h  sync.h  syscall.h  syscall_names.h  types.h  uaccess.h
include/arch/arm64/: insn.h  pgtable.h
kmod/: BUILD.bazel  Kbuild  Makefile  exports.manifest
kmod/devices/: CONTRIBUTING.md  README.md  aosp_4.14_android29.conf  aosp_4.19_unverified.conf  aosp_4.4_android28.conf  aosp_4.9_unverified.conf  gki_4.14_android29.conf  gki_4.19_unverified.conf  gki_4.4_android28.conf  gki_4.9_unverified.conf  gki_5.10_android12.conf  gki_5.15_android13.conf  gki_5.4_android30.conf  gki_6.12_android_api37.conf  gki_6.1_android14.conf  gki_6.6_android15.conf  schema.json
kmod/examples/hello_hook/: Makefile  hello_hook.c
kmod/include/kernelhook/: hook.h  kh_hook.h  kh_symvers.h  module.h  types.h
kmod/lds/: kmod.lds
kmod/mk/: detect_toolchain.mk  kmod.mk  kmod_sdk.mk
kmod/plt/: plt_stub.S
kmod/shim/: kmod_shim.h  shim.h  shim_ksyms.c  shim_libc.c
kmod/shim/include/linux/: compiler.h  compiler_attributes.h  debugfs.h  init.h  kernel.h  printk.h  seq_file.h  stddef.h  string.h  types.h  uaccess.h
kmod/src/: compat.c  compat.h  export.c  kh_strategy_boot.c  log.c  main.c  mem_ops.c  mem_ops.h  transit_setup.c
scripts/: extract_avd_crcs.py  kh_text.lds.in  lint_exports.sh  run_android_tests.sh  test.sh  test_avd_graft.sh  test_avd_kmod.sh  test_device_graft.sh  test_device_kmod.sh
scripts/lib/: detect_toolchain.sh  strategy_matrix.sh  strategy_matrix_check.py  strategy_matrix_regen_tsv.py  test_common.sh  test_common.test.sh
scripts/subcommands/: strategy-matrix.sh
src/: core_user.c  hmem.c  hook.c  kh_strategy.c  ksyms.c  memory.c  symbol.c  sync.c  uaccess.c
src/arch/arm64/: inline.c  insn.c  pgtable.c  transit.c
src/platform/: darwin.c  hmem_user.c  hook_install.c  hook_install_user.c  hook_mem_user.c  linux.c  log.c  remote_linux.c  remote_stub.c  section_fence.c  syscall.c
src/strategies/: cred_task.c  kimage_voffset.c  memstart_addr.c  swapper_pg_dir.c  uaccess_copy.c
tests/: CMakeLists.txt  test_api_misuse.c  test_chain.c  test_hook_basic.c  test_hook_chain.c  test_mem_sizes.c  test_page_isolation.c  test_reloc.c  test_security.c  test_stress.c
tests/golden/strategy_matrix/: survival.tsv
tests/kmod/: BUILD.bazel  Kbuild  Makefile  Makefile.sdk  demo_kh_root.c  demo_kh_root.h  freestanding.lds  kmod_freestanding.lds  kmod_loader.c  kmod_log.c  kmod_mem_ops.c  kmod_mem_ops.h  kmod_shim.h  kmod_transit_setup.c  log.c  mem_ops.c  mem_ops.h  plt_stub.S  shim.h  test_hook_kernel.c  test_hook_kernel.h  test_main.c  test_minimal.c  test_phase6_kh_root.c  test_resolver_common.h  test_resolver_copy_user.c  test_resolver_cred.c  test_resolver_cross_cpu.c  test_resolver_kimage_voffset.c  test_resolver_memstart_addr.c  test_resolver_stack.c  test_resolver_swapper_pg_dir.c  transit_setup.c
tests/kmod/export_link_test/: exporter.c  importer.c  test_on_avd.sh  verify_elf.sh
tests/userspace/: CMakeLists.txt  run_tests.sh  test_android.c  test_api_misuse.c  test_chain.c  test_error_paths.c  test_fp_edge.c  test_hmem.c  test_hook_basic.c  test_hook_chain.c  test_interaction.c  test_linux_arm64.c  test_mem_sizes.c  test_pac_strip.c  test_page_isolation.c  test_reloc.c  test_remote.c  test_security.c  test_smoke.c  test_strategy_consistency.c  test_strategy_registry.c  test_stress.c  test_typed_wrappers.c  test_unit.c
tools/kh_crc/: Makefile  kh_crc.c
tools/kh_crc/tests/: run_tests.sh
tools/kmod_loader/: Makefile  README.md  devices_table.generated.c  graft_vendor_ko.c  kmod_loader.c  probe.c  probe_embed.h  probe_module.c  resolver.c  resolver.h  subcommands.c  subcommands.h
tools/kmod_loader/strategies/: cli.c  config.c  probe_binary.c  probe_disasm.c  probe_loaded.c  probe_ondisk.c  probe_procfs.c
(+9 files in other folders)
