workspace(name = "kernelhook")

# ---- GKI kernel repository ----
#
# @gki_kernel is a local_repository pointing to the pre-built kernel
# artifacts inside the DDK container.  It is populated at build time by
# scripts/build/setup_bazel_ddk.sh which:
#   1. Finds the kernel build directory (KDIR, contains Module.symvers).
#   2. Writes bazel/kernel_build/kdir.txt with the KDIR path.
#   3. Writes bazel/kernel_build/BUILD.bazel with a kdir_file() target.
#
# The ddk_module() rule in //bazel:ddk.bzl reads kdir.txt to invoke make.

local_repository(
    name = "gki_kernel",
    path = "bazel/kernel_build",
)

# Note: kleaf (AOSP's official ddk_module Bazel rules) is NOT fetched here.
# KernelHook provides its own ddk_module() implementation in //bazel:ddk.bzl
# which delegates to make -C KDIR M=<pkg> — no AOSP workspace needed.
#
# Migration to upstream kleaf: add an http_archive for
#   https://android.googlesource.com/kernel/build
# and update each BUILD.bazel load() to @kleaf//build/kernel/kleaf:kernel.bzl.
