# SPDX-License-Identifier: GPL-2.0-or-later
# Bazel build for kernelhook.ko (Mode C — DDK ddk_module).
#
# Usage (inside DDK container after setup_bazel_ddk.sh):
#   bazel build //kmod:kernelhook
#
# Module.symvers is written to the package directory by make and can be used
# by SDK consumers via KBUILD_EXTRA_SYMBOLS.

load("//bazel:ddk.bzl", "ddk_headers", "ddk_module")

# Public API headers — consumed by SDK modules (kbuild_hello, third-party).
ddk_headers(
    name = "kernelhook_hdrs",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = [
        "include",
        "include/arch/arm64",
    ],
    visibility = ["//visibility:public"],
)

ddk_module(
    name = "kernelhook",
    out = "kernelhook.ko",
    kernel_build = "//bazel/kernel_build:kdir_file",
    # Anchor: representative .c file so ddk_module() can find the package dir.
    # make reads the full source list from kmod/Kbuild.
    srcs = ["src/main.c"],
    hdrs = [":kernelhook_hdrs"],
    visibility = ["//visibility:public"],
)
