# Generated (or updated) by scripts/build/setup_bazel_ddk.sh.
# Exposes the kernel build directory path to ddk_module() rules.

# kdir_file: a text file containing the absolute path to the kernel build
# directory (KDIR) inside the DDK container.  Read by ddk_module() genrules
# to invoke: make -C $KDIR M=<pkg-dir> ARCH=arm64 LLVM=1 modules
exports_files(["kdir.txt"], visibility = ["//visibility:public"])

# Convenience alias so BUILD.bazel files can reference this without knowing
# the path — used as $(location //bazel/kernel_build:kdir_file) in genrules.
filegroup(
    name = "kdir_file",
    srcs = ["kdir.txt"],
    visibility = ["//visibility:public"],
)
