# Generated (or updated) by scripts/build/setup_bazel_ddk.sh.
# Exposes the kernel build directory path and DDK clang directory to
# ddk_module() genrules.

# kdir_file: text file with the absolute path to KDIR (Module.symvers parent).
exports_files(["kdir.txt", "clangdir.txt"], visibility = ["//visibility:public"])

filegroup(
    name = "kdir_file",
    srcs = ["kdir.txt"],
    visibility = ["//visibility:public"],
)

# clangdir_file: text file with the DDK clang bin directory path.
# Used by ddk_module() to prepend to PATH before running make, ensuring
# llvm-nm from the DDK clang is used instead of the system llvm-nm.
filegroup(
    name = "clangdir_file",
    srcs = ["clangdir.txt"],
    visibility = ["//visibility:public"],
)
