# SPDX-License-Identifier: GPL-2.0-or-later
# Bazel build for kbuild_hello.ko (Mode C SDK consumer example).
#
# Usage (inside DDK container after setup_bazel_ddk.sh):
#   bazel build //examples/kbuild_hello:kbuild_hello
#
# Declaring deps=[//kmod:kernelhook] causes Bazel to build kernelhook.ko
# first, making Module.symvers available before kbuild_hello is compiled.

load("//bazel:ddk.bzl", "ddk_module")

ddk_module(
    name = "kbuild_hello",
    out = "kbuild_hello.ko",
    kernel_build = "//bazel/kernel_build:kdir_file",
    # Anchor: one representative .c file for package directory discovery.
    srcs = ["kbuild_hello_main.c"],
    deps = ["//kmod:kernelhook"],
)
