# SPDX-License-Identifier: GPL-2.0-or-later
# Bazel build for kh_test.ko (test module, Mode C — DDK ddk_module).
#
# Usage (inside DDK container after setup_bazel_ddk.sh):
#   bazel build //tests/kmod:kh_test
#
# The ddk_module() genrule runs: make -C KDIR M=$(pkg_dir) ARCH=arm64 LLVM=1
# KDIR is read from bazel/kernel_build/kdir.txt (written by setup_bazel_ddk.sh).
# Actual source list and include paths come from the package's Kbuild file.

load("//bazel:ddk.bzl", "ddk_module")

ddk_module(
    name = "kh_test",
    out = "kh_test.ko",
    kernel_build = "//bazel/kernel_build:kdir_file",
    # Anchor: one representative .c file so ddk_module() can find the package
    # directory.  make reads the full source list from the Kbuild file.
    srcs = ["test_main.c"],
)
